src/test/ui/associated-types/bound-lifetime-in-binding-only.angle.stderr
error[E0582]: binding for associated type `Item` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/bound-lifetime-in-binding-only.rs:22:25
   |
LL | fn angle<T: for<'a> Foo<Item=&'a i32>>() {
   |                         ^^^^^^^^^^^^

error[E0582]: binding for associated type `Item` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/bound-lifetime-in-binding-only.rs:27:37
   |
LL | fn angle1<T>() where T: for<'a> Foo<Item=&'a i32> {
   |                                     ^^^^^^^^^^^^

error[E0582]: binding for associated type `Item` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/bound-lifetime-in-binding-only.rs:32:37
   |
LL | fn angle2<T>() where for<'a> T: Foo<Item=&'a i32> {
   |                                     ^^^^^^^^^^^^

error[E0582]: binding for associated type `Item` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/bound-lifetime-in-binding-only.rs:37:27
   |
LL | fn angle3(_: &for<'a> Foo<Item=&'a i32>) {
   |                           ^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0582`.
